alpha version, opgeruimd

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,24 +1,12 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
     <head>
         <title>Nieuw tabblad</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
-        <link rel="stylesheet" href="style.css" type="text/css">
-
-
-        <script src="jquery-1.11.1.min.js"></script>
-        <script src="storejson2.min.js"></script>
-        
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
-            /*
-             * Edit the columns here
-             * When adding or deleting a column, all the values will be resetted
-             */
+            /* Edit the columns here. When adding or deleting a column, all the values will be resetted */
             var columns = [
                 "pushups",
                 "situps",
@@ -26,9 +14,11 @@ and open the template in the editor.
                 "walk the dog"
             ];
         </script>
-        <script src="main.js"></script>
+        <script src="js/jquery-1.11.1.min.js"></script>
+        <script src="js/storejson2.min.js"></script>
+        <script src="js/main.js"></script>
     </head>
-    <body onload="init();">
+    <body>
         <div class="container-fluid">
             <div class="row">
                 <h1 class="center">New Tab Dashboard</h1>
